--- a/src/index.css
+++ b/src/index.css
@@ -206,9 +206,10 @@ a:hover {
 body {
   margin: 0;
   background-color: var(--bg);
+  color: white;
   /* background: linear-gradient(to right, var(--primary-col) 0%,var(--primary-col) 50%,#000000 50%,var(--tertiary-col) 50%,var(--tertiary-col) 100%); */
   /* background: linear-gradient(170deg, rgba(49, 57, 73, 0.8) 20%, rgba(49, 57, 73, 0.5) 20%, rgba(49, 57, 73, 0.5) 35%, rgba(41, 48, 61, 0.6) 35%, rgba(41, 48, 61, 0.8) 45%, rgba(31, 36, 46, 0.5) 45%, rgba(31, 36, 46, 0.8) 75%, rgba(49, 57, 73, 0.5) 75%), linear-gradient(45deg, rgba(20, 24, 31, 0.8) 0%, rgba(41, 48, 61, 0.8) 50%, rgba(82, 95, 122, 0.8) 50%, rgba(133, 146, 173, 0.8) 100%) #313949; */
-  font-family: roboto;
+  font-family: "Manrope";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
