--- a/src/About.css
+++ b/src/About.css
@@ -2165,3 +2165,12 @@ a {
 .socials a:hover {
   color: #ff8370;
 }
+
+.footer {
+  font-family: 'Roboto Mono';
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-size: 15px;
+  padding-bottom: 30px;
+}
