Added Roboto in case arial nova doesnt work

--- a/src/About.css
+++ b/src/About.css
@@ -3,6 +3,7 @@
 @import url("http://fonts.cdnfonts.com/css/arial-nova");
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
   --py-bar-width: 325px;
@@ -2088,7 +2089,7 @@
 
 .description-section li {
   position: relative;
-  font-family: "Arial Nova";
+  font-family: "Arial Nova", "Roboto";
   color: white;
   font-size: 15px;
   padding-left: 15px;
@@ -2107,14 +2108,14 @@
   color: white;
   font-size: 15px;
   font-weight: 400;
-  font-family: "Arial Nova";
+  font-family: "Arial Nova", "Roboto";
   margin-bottom: 0;
 }
 p {
   color: white;
   font-size: 15px;
   font-weight: 400;
-  font-family: "Arial Nova";
+  font-family: "Arial Nova", "Roboto";
   margin-bottom: 0;
 }
 .features-title {
