Removed old website stuff and replaced with new site

--- a/src/index.css
+++ b/src/index.css
@@ -1,306 +1,21 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@300;800&display=swap");
-:root {
-    --bg: #282424; /* 1f1f1f */
-    --bg-accent: #484a4d;
-    --text-colour: #dadce1;
-    --nav-size: 40px;
-    --border: 1px solid #474a4d;
-    --border-radius: 8px;
-    --speed: 500ms;
-    /* --primary-col: #30343f; */
-    --primary-col: #272727;
-    --secondary-col: #f7f7ff;
-    /* --tertiary-col: #011627; */
-    --tertiary-col: #515052;
-    --quat-col: #b4b8ab;
-    --fifth-col: #344966;
-    --sixth-col: #81a4cd;
-    --seventh-col: #92140c;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-    /* #011c27 */
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-family: "Manrope", sans-serif;
-}
-
-a {
-    color: var(--text-colour);
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: none;
-    color: var(--text-colour);
-}
-@media screen and (min-width: 1200px) {
-    .nav-container {
-        max-width: 1150px;
-        display: flex;
-        justify-content: center;
-        margin-right: auto;
-        margin-left: auto;
+@layer base {
+    @font-face {
+        font-family: "Roboto Mono";
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: @import
+            url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap");
     }
-}
-
-@media screen and (max-width: 1200px) and (min-width: 1000px) {
-    .nav-container {
-        max-width: 950px;
-        display: flex;
-        justify-content: center;
-        margin-right: auto;
-        margin-left: auto;
-    }
-}
-
-@media screen and (max-width: 1000px) and (min-width: 700px) {
-    .nav-container {
-        max-width: 650px;
-        display: flex;
-        justify-content: center;
-        margin-right: auto;
-        margin-left: auto;
-    }
-}
-
-.navbar {
-    height: var(--nav-size);
-    background-color: transparent;
-    height: 100px;
-    width: 100%;
-}
-
-.navbar-nav {
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    background-color: transparent;
-    padding: 0rem 0.5rem;
-}
-
-.nav-item {
-    /* width: 110px; */
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    transition: all 300ms;
-}
-
-.nav-title {
-    width: 100%;
-    font-size: 20px;
-    line-height: 1.5;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: var(--text-colour);
-}
-
-.nav-img {
-    width: 40px;
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.icon-button {
-    font-size: 18px;
-    line-height: 1.5;
-    height: 40px;
-    background-color: transparent;
-    padding: 9px;
-    padding-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 300ms;
-    color: var(--text-colour);
-}
-
-.nav-item:hover {
-    filter: brightness(1.2);
-    background-color: rgba(76, 91, 92, 0.2);
-}
-
-.icon-button svg {
-    fill: var(--text-color);
-    width: 20px;
-    height: 20px;
-}
-
-.dropdown {
-    position: absolute;
-    z-index: 1000;
-    top: 38px;
-    right: -90px;
-    width: 200px;
-    transform: translateX(-45%);
-    background-color: var(--bg);
-    border: var(--border);
-    border-radius: var(--border-radius);
-    padding: 1rem;
-    overflow: hidden;
-    text-decoration: none;
-}
-
-.menu-item {
-    height: 50px;
-    display: flex;
-    align-items: center;
-    border-radius: var(--border-radius);
-    transition: background var(--speed);
-    text-decoration: none;
-}
-
-.menu-item:hover {
-    background-color: #525357;
-    text-decoration: none;
-}
-
-.drop-button {
-    --button-size: var(--nav-size);
-    width: var(--button-size) * 2;
-    height: var(--button-size);
-    border-radius: 50%;
-    background-color: #484a4d;
-    padding: 5px;
-    margin: 2px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: filter 300ms;
-}
-
-.drop-button:hover {
-    filter: brightness(1.2);
-}
-
-.drop-button svg {
-    fill: var(--text-color);
-    width: 20px;
-    height: 20px;
-}
-
-.social-tray {
-    padding-top: 20px;
-    position: absolute;
-    left: 50%;
-    margin-left: -520px;
 }
 
 body {
-    margin: 0;
-    background-color: var(--bg);
-    color: white;
-    /* background: linear-gradient(to right, var(--primary-col) 0%,var(--primary-col) 50%,#000000 50%,var(--tertiary-col) 50%,var(--tertiary-col) 100%); */
-    /* background: linear-gradient(170deg, rgba(49, 57, 73, 0.8) 20%, rgba(49, 57, 73, 0.5) 20%, rgba(49, 57, 73, 0.5) 35%, rgba(41, 48, 61, 0.6) 35%, rgba(41, 48, 61, 0.8) 45%, rgba(31, 36, 46, 0.5) 45%, rgba(31, 36, 46, 0.8) 75%, rgba(49, 57, 73, 0.5) 75%), linear-gradient(45deg, rgba(20, 24, 31, 0.8) 0%, rgba(41, 48, 61, 0.8) 50%, rgba(82, 95, 122, 0.8) 50%, rgba(133, 146, 173, 0.8) 100%) #313949; */
-    font-family: "Manrope";
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-        monospace;
-}
-
-a.social {
-    margin: 0 1rem;
-    transition: transform 250ms;
-    display: inline-block;
-    z-index: 4;
-}
-a.social:hover {
-    transform: translateY(-2px);
-}
-
-a.youtube {
-    color: var(--text-colour);
-}
-
-a.twitter {
-    color: var(--text-colour);
-}
-
-a.linkedin {
-    color: var(--text-colour);
-}
-
-a.github {
-    color: var(--text-colour);
-}
-h1 {
-    color: var(--text-colour);
-    font-size: 4em;
-}
-
-h2 {
-    font-family: monospace;
-    color: var(--text-colour);
-}
-.typed {
-    border-bottom: 2px solid #ffffff;
-}
-
-.typed-cursor {
-    opacity: 1;
-    animation: blink 0.7s infinite;
-}
-
-@keyframes blink {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-.typed-cursor {
-    opacity: 1;
-    animation: typedjsBlink 0.7s infinite;
-    -webkit-animation: typedjsBlink 0.7s infinite;
-    animation: typedjsBlink 0.7s infinite;
-}
-@keyframes typedjsBlink {
-    50% {
-        opacity: 0;
-    }
-}
-@-webkit-keyframes typedjsBlink {
-    0% {
-        opacity: 1;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-.typed-fade-out {
-    opacity: 0;
-    transition: opacity 0.25s;
-    -webkit-animation: 0;
-    animation: 0;
-}
-
-.no-match {
-    position: absolute;
-    left: 50%;
-    margin-left: -55px;
-    top: 40%;
+    @apply font-mono;
+    @apply bg-primary;
+    @apply m-0;
+    @apply text-whitetext;
 }
